# ffmpeg_dev

./: CMakeLists.txt  README.md  main.cpp
include/: config.h
include/libavutil/: file.h  frame.h
lib/: libavdevice.so.60.1.100  libavfilter.so.9.3.100  libavformat.so.60.3.100  libavutil.so.58.2.100  libswresample.so.4.10.100  libswscale.so.7.1.100
src/: dev_log.h  main.cpp  mmap_utils.cpp  mmap_utils.h  video_img.cpp  video_img.h
